# wfd-os

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CFA_GRANT_CONTEXT.md  CLAUDE.md  Procfile  WFD-OS-OVERVIEW.md  WFD-OS-Waifinder-PRD-v1.2.md  docker-compose.dev.yml  lightcast-jobs-export.xlsx  pyproject.toml  requirements-dev.txt
agents/apollo/: __init__.py  api.py  client.py  hunter_client.py  pyproject.toml
agents/assistant/: __init__.py  _db.py  api.py  base.py  bd_agent.py  college_agent.py  consulting_agent.py  employer_agent.py  finance_agent.py  marketing_agent.py  pyproject.toml  staff_agent.py  student_agent.py  youth_agent.py
agents/assistant/tools/: __init__.py
agents/finance/: audit_activity_labels.py  audit_dimension_display.py  cockpit_api.py  data_source.py  discussion_prompts.py  personnel.py  pyproject.toml  verdict_generator.py
agents/finance/design/: CFA_Cockpit.html  chat_spec.md  cockpit_data.py  cockpit_design_fixes.md  cockpit_template.html  compliance_requirements_display_spec.md  deferred_fixes.md  design_notes.md  generate_cockpit.py  personnel_contractors_view_spec.md
agents/finance/design/fixtures/: K8341_Personnel_and_Contractors.xlsx
agents/finance/tests/: conftest.py  test_audit_activity_labels.py  test_cockpit_api.py  test_verdict_generator.py
agents/grant/: __init__.py  api.py  pyproject.toml
agents/grant-compliance/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
agents/grant-compliance/alembic/: MIGRATION_CHECKLIST.md  env.py
agents/grant-compliance/alembic/versions/: 52e509f9e39a_add_qb_oauth_tokens.py  7c1fa8b3d2e4_add_attachment_count_to_transactions.py  8d2b4a91c0f7_add_last_scanned_at_to_transactions.py  a3f81cd7e22b_add_compliance_requirements_tables.py  b51e9d3a8c14_add_contracts_inventory_tables.py  e935de2c6a04_initial_schema.py
agents/grant-compliance/data/contracts_bootstrap/: K8341_Contracts_sample.xlsx  generate_sample.py
agents/grant-compliance/data/regulatory_corpus/: README.md  manifest.json
agents/grant-compliance/data/regulatory_corpus/omb_compliance_supplement_2025/: part_4_11.300_economic_development_cluster.txt
agents/grant-compliance/docs/: SYSTEM_SUMMARY.md  audit_readiness_tab_spec.md  compliance_requirements_agent_spec.md  contracts_inventory_spec.md  integration_notes.md
agents/grant-compliance/scripts/: init_db.py  seed_dev_data.py
agents/grant-compliance/scripts/fixtures/: qb_sandbox.json
agents/grant-compliance/src/grant_compliance/: __init__.py  config.py  main.py
agents/grant-compliance/src/grant_compliance/agents/: base.py  classifier.py  compliance.py  reporting.py  time_effort.py
agents/grant-compliance/src/grant_compliance/api/: schemas.py
agents/grant-compliance/src/grant_compliance/audit/: log.py
agents/grant-compliance/src/grant_compliance/compliance/: activity.py  audit_dimensions.py  dimension_readiness.py  rules.py  unallowable_costs.py
agents/grant-compliance/src/grant_compliance/compliance_requirements_agent/: __init__.py  agent.py  corpus.py  prompts.py  schemas.py  tasks.py
agents/grant-compliance/src/grant_compliance/contracts_bootstrap/: __init__.py  __main__.py  importer.py  loader.py  reconciliation.py  schemas.py
agents/grant-compliance/src/grant_compliance/db/: models.py  queries.py  session.py
agents/grant-compliance/src/grant_compliance/integrations/: __init__.py
agents/grant-compliance/src/grant_compliance/quickbooks/: client.py  oauth.py  sync.py
agents/grant-compliance/src/grant_compliance/utils/: llm.py
agents/grant-compliance/tests/: conftest.py  test_activity_endpoint.py  test_audit.py  test_audit_dimensions.py  test_classifier.py  test_compliance.py  test_config_guard.py  test_contracts.py  test_dimension_gaps.py  test_dimension_readiness.py  test_msgraph.py  test_quickbooks_readonly.py  test_transaction_attachments.py
agents/grant/bot/: __init__.py  grant_bot.py
agents/grant/database/: db.py  models.py
agents/grant/ingestion/: baseline_loader.py  file_parser.py  sharepoint.py
agents/grant/queries/: handler.py
agents/grant/reconciliation/: engine.py
agents/laborpulse/: __init__.py  api.py  client.py  pyproject.toml
agents/market-intelligence/: agent.py  app.py  pyproject.toml
agents/market-intelligence/bd-pipeline/: 001_create_tables.sql  002_create_scoring_tables.sql  003_create_agent_tables.sql  004_create_discovery_tables.sql  005_create_email_sequences.sql  006_create_marketing_leads.sql  agent12.py  agent12_system.txt  agent13.py  agent13_system.txt  agent14.py  agent15.py  agent15_system.txt  approach_a.py  enrich.py  find_apollo_contacts.py  get_apollo_sequence_ids.py  ingest.py  notify.py  populate_prospects.py  run_agents.py  scheduler.py  seed_definitions.py  suppression.py  test_pipeline.py
agents/market-intelligence/bot/: __init__.py  market_bot.py
agents/market-intelligence/database/: pg_client.py
agents/market-intelligence/dataverse/: __init__.py  client.py
agents/market-intelligence/ingest/: __init__.py  arbeitnow.py  dedup.py  digital_filter.py  jsearch.py  runner.py  usajobs.py
agents/market-intelligence/teams-manifest/: manifest.json
agents/market-intelligence/tools/: __init__.py  employers.py  jobs.py  semantic_skills.py  skills.py  summary.py  wages.py
agents/marketing/: __init__.py  api.py  pyproject.toml
agents/portal/: __init__.py  college_api.py  consulting_api.py  email.py  email_templates.py  pyproject.toml  showcase_api.py  student_api.py  wji_api.py
agents/profile/: __init__.py  link_resumes.py  parse_resumes.py  parse_resumes_test.py  pyproject.toml
agents/reporting/: __init__.py  api.py  pyproject.toml
agents/reporting/dashboard/: index.html  package-lock.json  package.json
agents/reporting/dashboard/src/: App.tsx  api.ts  index.css
agents/reporting/dashboard/src/components/: MetricCard.tsx  PanelHeader.tsx  (+1 more)
agents/scoping/: __init__.py  api.py  briefing.py  models.py  pipeline.py  postcall.py  proposal.py  pyproject.toml  research.py  runner.py  transcript_analysis.py  webhook.py
(+363 files in other folders)
