# agents/assistant — Six conversational agents (student, employer, college,
# consulting, staff, youth) served on port 8009.
#
# Purpose: declare runtime deps for deployment isolation. Source imports
# (`agents.assistant.*`) resolve via the monorepo install at `/pyproject.toml`.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfdos-assistant"
version = "0.0.1"
description = "Six conversational agents (Gemini Flash-backed) on shared FastAPI service."
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "wfdos-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "google-generativeai>=0.8",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = []
packages = []
