[project]
name = "grant-compliance"
version = "0.1.0"
description = "Grant accounting & federal compliance assistant on top of QuickBooks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.39",
    "cryptography>=43",
    "python-multipart>=0.0.12",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "freezegun>=1.5",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
