# agents/portal — five FastAPI backends powering the Next.js student portal.
#
# Services: student_api (8001), showcase_api (8002), college_api (8005),
# wji_api (8006), consulting_api (8003). Shared helpers in email.py and
# email_templates.py.
#
# Purpose: declare runtime deps for deployment isolation. Source imports
# (`agents.portal.*`) resolve via the monorepo install at `/pyproject.toml`.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfdos-portal"
version = "0.0.1"
description = "Portal backends — student, showcase, college, WJI, consulting intake."
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "wfdos-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic[email]>=2.5",
    "psycopg2-binary>=2.9",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = []
packages = []
