# agents/scoping — consulting-scoping pipeline: research, briefing, proposal,
# post-call transcript analysis.
#
# Purpose: declare runtime deps for deployment isolation. Source imports
# (`agents.scoping.*`) resolve via the monorepo install at `/pyproject.toml`.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfdos-scoping"
version = "0.0.1"
description = "Scoping agent — prospect research, SharePoint workspace, Teams meeting, proposal doc."
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "wfdos-common",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "anthropic>=0.31",
    "python-docx>=1.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = []
packages = []
